# kitt2

./: .dockerignore  .env.example  .gitignore  .taplo.toml  Cargo.toml  README.md  kitt.py  llm.py  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  rust-toolchain  rust-toolchain.toml  tailwind.config.ts
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: audit-rs.yml  ci-rs.yml  ci-ts.yml
app/: global.css  layout.tsx  page.tsx
app/api/get-participant-token/: route.ts
assets/oreo_donut/: license.txt  scene.gltf
bev/: Cargo.toml
bev/assets/oreo_donut/: license.txt
components/: ActiveRoom.tsx  AgentMultibandAudioVisualizer.tsx  AudioInputTile.tsx  Button.tsx  ChatMessage.tsx  ChatMessageInput.tsx  ChatTile.tsx  ColorPicker.tsx  ConfigurationPanelItem.tsx  NameValueRow.tsx  Playground.tsx  PlaygroundDeviceSelector.tsx  PlaygroundTile.tsx
crates/engine_assets/: Cargo.toml
crates/engine_assets/src/: gltf.rs  materials.rs  mesh.rs  model.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: lib.rs
crates/engine_scene/: Cargo.toml
crates/engine_scene/shaders/: tri-frag.glsl
crates/engine_scene/src/: material_manager.rs  node.rs  scene.rs  texture_manager.rs
crates/engine_turbo/: Cargo.toml
crates/engine_turbo/src/: lib.rs  turbo.rs  webrtc.rs
engine_livekit/: Cargo.toml
engine_livekit/shaders/: frag.glsl
engine_livekit/src/: core.rs  gpt.rs  lib.rs  room_events.rs  track_pub.rs  tts.rs  turbo.rs  webrtc.rs
engine_livekit/src/assets/: gltf.rs  materials.rs  mesh.rs  model.rs
engine_livekit/src/scene/: material_manager.rs  mod.rs  node.rs  scene.rs  texture_manager.rs
hooks/: useAppConfig.tsx
lib/: util.ts
lkgpt/: Cargo.toml
lkgpt-service/: Cargo.toml
lkgpt-service/src/: main.rs  response.rs  state.rs
lkgpt-service/src/routes/: health_check.rs  lsdk_webhook.rs  mod.rs
lkgpt/shaders/: vert.glsl
lkgpt/src/: __.rs  bevy_vulkan.rs  controls.rs  core.rs  frame_capture.rs  gpt.rs  llm.rs  main.rs  response.rs  room_events.rs  server.rs  state.rs  stt.rs  track_pub.rs  tts.rs  turbo.rs  video.rs  webrtc.rs
lkgpt/src/assets/: gltf.rs  mod.rs  texture.rs
lkgpt/src/routes/: lsdk_webhook.rs
lkgpt/src/scene/: camera.rs  material_manager.rs  node.rs  scene.rs  texture_manager.rs
lkgpt/src/utils/: create_bot_token.rs
lkgpt_service/: Cargo.toml
lkgpt_service/src/: main.rs
lkgpt_service/src/utils/: mod.rs
meet/: middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
meet/app/: layout.tsx
meet/app/api/url/: route.ts
meet/app/r/: page.tsx
meet/app/r/[name]/: page.tsx
meet/components/: Debug.tsx  TailwindIndicator.tsx
meet/components/ui/: button.tsx
meet/lib/: client-utils.ts
meet/pages/: index.tsx
meet/pages/api/: token.ts
meet/pages/r/: [name].tsx
meet/styles/: Debug.module.css
meet/utils/: helpers.ts  lksdk.ts  shadcnPlugin.ts
server/: agent.py
utils/: lksdk.ts  server.ts  tw.ts
