[package]
name = "engine_livekit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-openai = "0.16.2"
chrono = "0.4.31"
futures = "0.3.29"
glam = "0.24.2"
gltf = { version = "1.3.0", features = [
  "KHR_lights_punctual",
  "KHR_materials_pbrSpecularGlossiness",
  "KHR_materials_unlit",
  "KHR_texture_transform",
  "KHR_materials_transmission",
  "KHR_materials_ior",
  "KHR_materials_variants",
  "KHR_materials_volume",
  "KHR_materials_specular",
] }
image = "0.24.7"
livekit = { git = "https://github.com/livekit/rust-sdks", rev = "36d7690" }
log = "0.4.20"
parking_lot = "0.12.1"
png = "0.17.10"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = "1.33.0"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
whisper-rs = { version = "0.8.0" } # "simd",
