[package]
name = "lkgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
cgmath = "0.18.0"
dotenv = "0.15.0"
engine_core = { version = "0.0.1", path = "../crates/engine_core" }
engine_turbo = { version = "0.1.0", path = "../crates/engine_turbo" }
futures = "0.3.29"
livekit = "0.2.0"
livekit-api = "0.2.0"
livekit-protocol = "0.2.0"
log = "0.4.20"
parking_lot = "0.12.1"
pretty_env_logger = "0.5.0"
serde = "1.0.191"
tokio = "1.33.0"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
