[package]
name = "lkgpt"
version = "0.0.1"
edition = "2021"
rust-version.workspace = true

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
dotenvy = "0.15.7"
livekit = { git = "https://github.com/livekit/rust-sdks", rev = "36d7690", features = [
  "native-tls",
] }
livekit-api = { git = "https://github.com/livekit/rust-sdks", rev = "36d7690" }
livekit-protocol = { git = "https://github.com/livekit/rust-sdks", rev = "36d7690" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

async-openai = "0.18.0"
chrono = "0.4.31"
futures = "0.3.30"
glam = "0.25.0"
gltf = { version = "1.4.0", features = [
  "KHR_lights_punctual",
  "KHR_materials_pbrSpecularGlossiness",
  "KHR_materials_unlit",
  "KHR_texture_transform",
  "KHR_materials_transmission",
  "KHR_materials_ior",
  "KHR_materials_variants",
  "KHR_materials_volume",
  "KHR_materials_specular",
] }
image = "0.24.7"
png = "0.17.10"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
base64 = "0.21.6"
parking_lot = "0.12.1"
fastwebsockets = "0.6.0"
crossbeam = "0.8.4"
deepgram = "0.4.0"
async-trait = "0.1.77"
ezsockets = { version = "0.6.1", features = ["client"] }
tracing-subscriber = "0.3.18"
async-channel = "2.1.1"
bytes = "1.5.0"
url = "2.5.0"
bevy = "0.12.1"
