[package]
name = "lkgpt"
version = "0.0.1"
edition = "2021"
rust-version.workspace = true
default-run = "lkgpt"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
async-channel = "2.1.0"
async-openai = "0.18.0"
async-trait = "0.1.74"
base64 = "0.21.5"
bevy = { version = "0.12.0", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_winit",
] }
bevy_gaussian_splatting = { version = "2.0.2", default-features = true }
bevy_mod_picking = "0.17.0"
bevy_panorbit_camera = "0.10.0"
bevy_transform_gizmo = "0.9.0"
bevy_web_asset = "0.7.0"
bytes = "1.5.0"
chrono = "0.4.31"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.10"
deepgram = { git = "https://github.com/cs50victor/deepgram-rust-sdk.git", branch = "live-fork" }
dotenvy = "0.15.7"
ezsockets = { version = "0.6.1", features = ["client"] }
futures = "0.3.29"
futures-intrusive = "0.5.0"
image = { version = "0.24.7", default-features = false, features = ["png"] }
livekit = { git = "https://github.com/livekit/rust-sdks", rev = "36d7690", features = [
  "native-tls",
] }
livekit-api = { git = "https://github.com/livekit/rust-sdks", rev = "36d7690" }
livekit-protocol = { git = "https://github.com/livekit/rust-sdks", rev = "36d7690" }
log = "0.4.20"
parking_lot = "0.12.1"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
rodio = { version = "0.17.3", features = ["symphonia-mp3"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
wgpu = { version = "0.17.1", features = ["vulkan-portability"] }
