[package]
name = "lkgpt"
version = "0.0.1"
edition = "2021"
rust-version.workspace = true
default-run = "lkgpt"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.79"
async-channel = "2.1.1"
async-openai = "0.18.3"
async-trait = "0.1.77"
base64 = "0.21.7"
bevy = { version = "0.12.1", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
] }
bevy_gaussian_splatting = { version = "2.0.2", default-features = true }
bevy_mod_picking = "0.17.0"
bevy_panorbit_camera = "0.11.1"
bevy_transform_gizmo = "0.10.0"
bevy_web_asset = "0.7.0"
bytes = "1.5.0"
chrono = "0.4.33"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
deepgram = { git = "https://github.com/cs50victor/deepgram-rust-sdk.git", branch = "live-fork" }
dotenvy = "0.15.7"
ezsockets = { version = "0.6.2", features = ["client"] }
futures = "0.3.30"
futures-intrusive = "0.5.0"
image = { version = "0.24.8", default-features = false, features = ["png"] }
livekit = { git = "https://github.com/cs50victor/livekit-rust-sdks.git", branch = "update-proto", features = [
  "native-tls",
] }
livekit-api = { git = "https://github.com/cs50victor/livekit-rust-sdks.git", branch = "update-proto" }
livekit-protocol = { git = "https://github.com/cs50victor/livekit-rust-sdks.git", branch = "update-proto" }
log = "0.4.20"
parking_lot = "0.12.1"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
rodio = { version = "0.17.3", features = ["symphonia-mp3"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
wgpu = { version = "0.19.1" }
