[package]
name = "engine_core"
version = "0.0.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.75"
bytemuck = { version = "1.14", features = [
  "derive",
  "extern_crate_std",
  "min_const_generics",
] }
log = "0.4.20"
vulkano = "0.33.0"
