[package]
name = "engine_scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
engine_assets = { path = "../engine_assets" }
glam = "0.24.2"
log = "0.4.20"
png = "0.17.10"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
