[package]
name = "engine_turbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
engine_assets = { path = "../engine_assets" }
engine_core = { path = "../engine_core" }
engine_scene = { path = "../engine_scene" }
image = "0.24.7"
livekit = "0.2.0"
log = "0.4.20"
parking_lot = "0.12.1"
tokio = "1.33.0"
vulkano = "0.33.0"
